--- a/references.bib
+++ b/references.bib
@@ -65,6 +65,15 @@
   url		= {https://www.youtube.com/watch?v=u8B3j8rqYMw}
 }
 
+@Article{	  alsallakh2014,
+  title		= {Visualizing sets and set-typed data: State-of-the-art and
+		  future challenges},
+  author	= {Alsallakh, Bilal and Micallef, Luana and Aigner, Wolfgang
+		  and Hauser, Helwig and Miksch, Silvia and Rodgers, Peter},
+  journal	= {Eurographics Conference on Visualization (EuroVis)},
+  year		= {2014}
+}
+
 @Article{	  backus1978,
   title		= {The history of Fortran I, II, and III},
   author	= {Backus, John},
@@ -221,6 +230,19 @@
   month		= jul,
   note		= {[Online; accessed 18. Oct. 2022]},
   url		= {https://d3js.org}
+}
+
+@Article{	  bouchet-valat2023,
+  author	= {Bouchet-Valat, Milan and
+		  Kami{\ifmmode\acute{n}\else\'{n}\fi}ski, Bogumi{\l}},
+  title		= {DataFrames.jl: Flexible and Fast Tabular Data in Julia},
+  journal	= {Journal of Statistical Software},
+  volume	= {107},
+  pages		= {1--32},
+  year		= {2023},
+  month		= sep,
+  issn		= {1548-7660},
+  doi		= {10.18637/jss.v107.i04}
 }
 
 @InProceedings{	  bourhis2017,
@@ -518,6 +540,15 @@
   organization	= {IEEE}
 }
 
+@Misc{		  election2023,
+  author	= {{Electoral Commission New Zealand}},
+  title		= {E9 Statistics - Overall Results},
+  year		= {2023},
+  month		= october,
+  note		= {[Online; accessed 6. Nov. 2024]},
+  url		= {https://www.electionresults.govt.nz/electionresults_2023/index.html}
+}
+
 @Article{	  elmqvist2011,
   title		= {Fluid interaction for information visualization},
   author	= {Elmqvist, Niklas and Moere, Andrew Vande and Jetter,
@@ -759,6 +790,20 @@
   pages		= {30--55},
   year		= {2012},
   publisher	= {ACM New York, NY, USA}
+}
+
+@Article{	  hellerstein1999,
+  author	= {Hellerstein, J. M. and Avnur, R. and Chou, A. and Hidber,
+		  C. and Olston, C. and Raman, V.},
+  title		= {{Interactive data analysis: the Control project}},
+  journal	= {Computer},
+  volume	= {32},
+  number	= {8},
+  pages		= {51--59},
+  year		= {1999},
+  month		= aug,
+  publisher	= {IEEE},
+  doi		= {10.1109/2.781635}
 }
 
 @Misc{		  hickey2011,
@@ -1297,6 +1342,14 @@
   year		= {2006}
 }
 
+@Manual{	  muller2023,
+  title		= {tibble: Simple Data Frames},
+  author	= {Kirill Müller and Hadley Wickham},
+  year		= {2023},
+  note		= {R package version 3.2.1},
+  url		= {https://CRAN.R-project.org/package=tibble}
+}
+
 @Book{		  murray2017,
   title		= {Interactive data visualization for the web: an
 		  introduction to designing with D3},
@@ -1366,6 +1419,28 @@
   month		= sep,
   note		= {[Online; accessed 17. Oct. 2024]},
   url		= {https://pandas.pydata.org/docs/reference/frame.html}
+}
+
+@Misc{		  parent2013,
+  author	= {Parent, Sean},
+  title		= {Inheritance Is The Base Class of Evil},
+  journal	= {GoingNative},
+  year		= {2013},
+  month		= may,
+  publisher	= {Youtube},
+  note		= {[Online; accessed 7. Nov. 2024]},
+  url		= {https://www.youtube.com/watch?v=2bLkxj6EVoM&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B}
+}
+
+@Misc{		  parent2015,
+  author	= {Parent, Sean},
+  title		= {Better Code: Data Structures},
+  journal	= {CppCon},
+  year		= {2015},
+  month		= sep,
+  publisher	= {Youtube},
+  note		= {[Online; accessed 7. Nov. 2024]},
+  url		= {https://www.youtube.com/watch?v=sWgDk-o-6ZE&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B&index=5}
 }
 
 @Article{	  parihar2015,
@@ -1477,6 +1552,15 @@
   url		= {https://plotly.com/python/webgl-vs-svg}
 }
 
+@Misc{		  polars2024,
+  author	= {Polars Core Team},
+  title		= {Index - Polars user guide},
+  year		= {2024},
+  month		= nov,
+  note		= {[Online; accessed 8. Nov. 2024]},
+  url		= {https://docs.pola.rs}
+}
+
 @InProceedings{	  pu2020,
   title		= {A probabilistic grammar of graphics},
   author	= {Pu, Xiaoying and Kay, Matthew},
@@ -1539,6 +1623,15 @@
   month		= aug,
   note		= {[Online; accessed 2. Aug. 2024]},
   url		= {https://react.dev}
+}
+
+@Misc{		  referendum2020,
+  author	= {{Electoral Commission New Zealand}},
+  title		= {Official referendum results released},
+  year		= {2020},
+  month		= nov,
+  note		= {[Online; accessed 6. Nov. 2024]},
+  url		= {https://elections.nz/media-and-news/2020/official-referendum-results-released}
 }
 
 @Book{		  reynolds2011,
@@ -1616,6 +1709,12 @@
   pages		= {341--350},
   year		= {2016},
   publisher	= {IEEE}
+}
+
+@Misc{		  scheidegger2016,
+  title		= {Interactive Visual Analysis of Big Data.},
+  author	= {Scheidegger, Carlos},
+  year		= {2016}
 }
 
 @Book{		  sharvit2022,
@@ -1843,6 +1942,19 @@
   year		= {2018}
 }
 
+@Article{	  tierney2023,
+  author	= {Tierney, Nicholas and Cook, Dianne},
+  title		= {{Expanding Tidy Data Principles to Facilitate Missing Data
+		  Exploration, Visualization and Assessment of Imputations}},
+  journal	= {J. Stat. Soft.},
+  volume	= {105},
+  pages		= {1--31},
+  year		= {2023},
+  month		= feb,
+  issn		= {1548-7660},
+  doi		= {10.18637/jss.v105.i07}
+}
+
 @Article{	  todorovic2008,
   title		= {Gestalt principles},
   author	= {Todorovic, Dejan},
@@ -1923,6 +2035,19 @@
   url		= {https://www.typescriptlang.org}
 }
 
+@Article{	  unwin1996,
+  author	= {Unwin, Antony and Hawkins, George and Hofmann, Heike and
+		  Siegl, Bernd},
+  title		= {{Interactive Graphics for Data Sets with Missing
+		  Values{\ifmmode---\else\textemdash\fi}MANET}},
+  journal	= {J. Comput. Graph. Stat.},
+  year		= {1996},
+  month		= jun,
+  issn		= {1047-4700},
+  publisher	= {Taylor {\&} Francis Group},
+  url		= {https://www.tandfonline.com/doi/abs/10.1080/10618600.1996.10474700}
+}
+
 @Article{	  unwin1999,
   author	= {Unwin, Antony},
   title		= {{Requirements for interactive graphics software for
@@ -1938,10 +2063,11 @@
   doi		= {10.1007/PL00022706}
 }
 
-@Book{		  unwin2024,
-  author	= {Unwin, Antony},
-  title		= {Graphical Data Analysis with R},
-  year		= {2024}
+@book{unwin2018,
+  title={Graphical data analysis with R},
+  author={Unwin, Antony},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
 }
 
 @InProceedings{	  urbanek2003,
@@ -2012,26 +2138,27 @@
   publisher	= {Annual Reviews}
 }
 
-@misc{vaneerd2021,
-	author = {Van Eerd, Tony},
-	title = {Keynote: SOLID, Revisited},
-	journal = {CppNow},
-	year = {2021},
-	month = jul,
-	publisher = {Youtube},
-	note = {[Online; accessed 7. Nov. 2024]},
-	url = {https://www.youtube.com/watch?v=glYq-dvgby4}
+@Misc{		  vaneerd2021,
+  author	= {Van Eerd, Tony},
+  title		= {Keynote: SOLID, Revisited},
+  journal	= {CppNow},
+  year		= {2021},
+  month		= jul,
+  publisher	= {Youtube},
+  note		= {[Online; accessed 7. Nov. 2024]},
+  url		= {https://www.youtube.com/watch?v=glYq-dvgby4}
 }
 
-@misc{vaneerd2023,
-	author = {Van Eerd, Tony},
-	title = {Value Oriented Programming Part 1: You Say You Want to Write a Function},
-	journal = {CppNow},
-	year = {2023},
-	month = sep,
-	publisher = {Youtube},
-	note = {[Online; accessed 7. Nov. 2024]},
-	url = {https://www.youtube.com/watch?v=b4p_tcLYDV0}
+@Misc{		  vaneerd2023,
+  author	= {Van Eerd, Tony},
+  title		= {Value Oriented Programming Part 1: You Say You Want to
+		  Write a Function},
+  journal	= {CppNow},
+  year		= {2023},
+  month		= sep,
+  publisher	= {Youtube},
+  note		= {[Online; accessed 7. Nov. 2024]},
+  url		= {https://www.youtube.com/watch?v=b4p_tcLYDV0}
 }
 
 @Misc{		  vaneerd2024,
@@ -2364,101 +2491,58 @@
   url		= {https://ziglang.org/documentation/master}
 }
 
-@misc{referendum2020,
-  author = {{Electoral Commission New Zealand}},
-	title = {Official referendum results released},
-	year = {2020},
-	month = nov,
-	note = {[Online; accessed 6. Nov. 2024]},
-	url = {https://elections.nz/media-and-news/2020/official-referendum-results-released}
+@book{buhlmann2016,
+  title={Handbook of big data},
+  author={B{\"u}hlmann, Peter and Drineas, Petros and Kane, Michael and van der Laan, Mark},
+  year={2016},
+  publisher={CRC Press}
 }
 
-@misc{election2023,
-	author = {{Electoral Commission New Zealand}},
-	title = {E9 Statistics - Overall Results},
-	year = {2023},
-	month = october,
-	note = {[Online; accessed 6. Nov. 2024]},
-	url = {https://www.electionresults.govt.nz/electionresults_2023/index.html}
+
+
+@incollection{shneiderman2003,
+  title={The eyes have it: A task by data type taxonomy for information visualizations},
+  author={Shneiderman, Ben},
+  booktitle={The craft of information visualization},
+  pages={364--371},
+  year={2003},
+  publisher={Elsevier}
 }
 
-@article{alsallakh2014,
-  title={Visualizing sets and set-typed data: State-of-the-art and future challenges},
-  author={Alsallakh, Bilal and Micallef, Luana and Aigner, Wolfgang and Hauser, Helwig and Miksch, Silvia and Rodgers, Peter},
-  journal={Eurographics Conference on Visualization (EuroVis)},
-  year={2014}
+@article{kosara2016,
+  title={Presentation-oriented visualization techniques},
+  author={Kosara, Robert},
+  journal={IEEE computer graphics and applications},
+  volume={36},
+  number={1},
+  pages={80--85},
+  year={2016},
+  publisher={IEEE}
 }
 
-@article{unwin1996,
-	author = {Unwin, Antony and Hawkins, George and Hofmann, Heike and Siegl, Bernd},
-	title = {{Interactive Graphics for Data Sets with Missing Values{\ifmmode---\else\textemdash\fi}MANET}},
-	journal = {J. Comput. Graph. Stat.},
-	year = {1996},
-	month = jun,
-	issn = {1047-4700},
-	publisher = {Taylor {\&} Francis Group},
-	url = {https://www.tandfonline.com/doi/abs/10.1080/10618600.1996.10474700}
+@article{tukey1993,
+  title={Graphic comparisons of several linked aspects: Alternatives and suggested principles},
+  author={Tukey, John W},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={2},
+  number={1},
+  pages={1--33},
+  year={1993},
+  publisher={Taylor \& Francis}
 }
 
-@article{tierney2023,
-	author = {Tierney, Nicholas and Cook, Dianne},
-	title = {{Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations}},
-	journal = {J. Stat. Soft.},
-	volume = {105},
-	pages = {1--31},
-	year = {2023},
-	month = feb,
-	issn = {1548-7660},
-	doi = {10.18637/jss.v105.i07}
+@inproceedings{hibbard1994,
+  title={A lattice model for data display},
+  author={Hibbard, William L and Dyer, Charles R and Paul, Brian E},
+  booktitle={Proceedings Visualization'94},
+  pages={310--317},
+  year={1994},
+  organization={IEEE}
 }
 
-@misc{parent2015,
-	author = {Parent, Sean},
-	title = {Better Code: Data Structures},
-	journal = {CppCon},
-	year = {2015},
-	month = sep,
-	publisher = {Youtube},
-	note = {[Online; accessed 7. Nov. 2024]},
-	url = {https://www.youtube.com/watch?v=sWgDk-o-6ZE&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B&index=5}
-}
-
-@misc{parent2013,
-	author = {Parent, Sean},
-	title = {Inheritance Is The Base Class of Evil},
-	journal = {GoingNative},
-	year = {2013},
-	month = may,
-	publisher = {Youtube},
-	note = {[Online; accessed 7. Nov. 2024]},
-	url = {https://www.youtube.com/watch?v=2bLkxj6EVoM&list=PLM5v5JsFsgP21eB4z2mIL8upkvT00Tw9B}
-}
-
-@article{bouchet-valat2023,
-	author = {Bouchet-Valat, Milan and Kami{\ifmmode\acute{n}\else\'{n}\fi}ski, Bogumi{\l}},
-	title = {DataFrames.jl: Flexible and Fast Tabular Data in Julia},
-	journal = {Journal of Statistical Software},
-	volume = {107},
-	pages = {1--32},
-	year = {2023},
-	month = sep,
-	issn = {1548-7660},
-	doi = {10.18637/jss.v107.i04}
-}
-
-@Manual{muller2023,
-    title = {tibble: Simple Data Frames},
-    author = {Kirill Müller and Hadley Wickham},
-    year = {2023},
-    note = {R package version 3.2.1},
-    url = {https://CRAN.R-project.org/package=tibble},
-}
-
-@misc{polars2024,
-  author = {Polars Core Team},
-	title = {Index - Polars user guide},
-	year = {2024},
-	month = nov,
-	note = {[Online; accessed 8. Nov. 2024]},
-	url = {https://docs.pola.rs}
+@book{hutchins1999,
+  title={Modelling visualisation using formal algebra},
+  author={Hutchins, Matthew A},
+  year={1999},
+  publisher={Australian National University}
 }
