--- a/foo.Rmd
+++ b/foo.Rmd
@@ -1,15 +1,27 @@
 ---
-title: "Untitled"
+title: "foo"
 author: "Adam Bartonicek"
 date: "`r Sys.Date()`"
 output: html_document
 ---
 
-
-```{r}
-
-df_split <- split(mtcars, mtcars$cyl)
-
-knitr::kable(df_split[[1]])
-
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 ```
+
+\begin{tikzpicture}[scale=1.0]
+  
+  \draw[white] (-3.5, -3) rectangle (3.5, 2.5);
+
+  \draw[rounded corners=3, color=black, line width=1] (-3, -2) rectangle (3, 2);
+
+  \fill[blue] plot [smooth cycle, tension=0.75] coordinates { 
+    (-1.65, -0.25) (-1.55, 0.75) (-0.4, 1.1) (0.3, 0.5) 
+    (0.85, -0.35) (-0.3, -1.5) (-1.6, -1.15) } -- cycle; 
+  
+  \fill[blue] plot [smooth cycle, tension=0.75] coordinates { 
+    (1.25, 0.5) (2.25, 0) (2, -1) (1.75, -0.25)} -- cycle; 
+  
+  \node at (0, -2.5) { $\mathsf{x} \subset X$ };
+  
+\end{tikzpicture}
