--- a/intro.Rmd
+++ b/intro.Rmd
@@ -8,9 +8,11 @@ editor_options:
 
 ## Brief history of interactive data visualization
 
-### Early interactive data visualization: By statisticians for statisticians
+### Static data visualization
 
-Static data visualization has a rich and intricate history, and a full treatment is beyond the scope of the present thesis [but see e.g. @dix1998; @friendly2006; @friendly2021; @young2011]. Briefly, prior to the mid-20th century, data visualization was often considered as at best secondary to "serious" statistical analysis [although there were also some counter-examples, see e.g. @friendly2006; @young2011]. However, beginning in the late 1950's, a series of developments took place which lead to a rise in the prominence and accessibility of data visualization. Firstly, at the theoretical level, the work of Tukey [-@tukey1962; -@tukey1977] and Bertin [-@bertin1967] established data visualization as valuable discipline in its own right. Secondly, at the practical level, the development of personal computers [see e.g. @abbate1999] and high-level programming languages such as FORTRAN in 1954 [@backus1978], made the process of rendering production-grade figures near-effortless in comparison to the earlier hand-drawn techniques. Combined, these developments lead to a surge in the use and dissemination of data visualization.  
+Static data visualization has a rich and intricate history, and a full treatment is beyond the scope of the present thesis [but see e.g. @dix1998; @friendly2006; @friendly2021; @young2011]. Briefly, prior to the mid-20th century, data visualization was often considered as at best secondary to "serious" statistical analysis [although are also some counter-examples, see e.g. @friendly2006; @young2011]. However, beginning in the late 1950's, a series of developments took place which lead to a rise in the prominence and accessibility of data visualization. Firstly, at the theoretical level, the work of Tukey [-@tukey1962; -@tukey1977] and Bertin [-@bertin1967] established data visualization as valuable discipline in its own right. Secondly, at the practical level, the development of personal computers [see e.g. @abbate1999] and high-level programming languages such as FORTRAN in 1954 [@backus1978], made the process of rendering production-grade figures near-effortless in comparison to the earlier hand-drawn techniques. Combined, these developments lead to a surge in the use and dissemination of data visualization.  
+
+### Early interactive data visualization: By statisticians for statisticians
 
 With static data visualization on the rise in the 1950's, interactive data visualization would not be left far behind. The very early interactive data visualization systems tended to be designed for niche, specialized tasks. For example, @fowlkes1969 designed a system which allowed the users to view probability plots under different configurations of parameters and transformations, whereas @kruskal1964 created a tool for visualizing multidimensional scaling. 
 
@@ -116,11 +118,9 @@ In contrast, some interactive features require specialized data structures and c
 
 ### Working definition
 
-Clearly, when building an interactive data visualization system, what we choose to call "interactive" has profound implications on our implementation. So how do we decide what we should consider "interactive"? 
+As was discussed in previous sections, the definition "interactive data visualization" varies across fields and researchers. Moreover, when building an interactive data visualization system, this distinction matters, since different interactive features inherently come with different levels of complexity. Thus, how should we go about deciding what to consider "interactive" for our purposes? 
 
-There are essentially two modes of visualizing data. 
-
-In statistics, the goal of data visualization is to facilitate rapid, accurate, and effective data exploration. 
+Data visualization can be broadly categorized into two primary modes: presentation and exploration. While both modes share a bulk of common techniques, each comes with a different set of goals and challenges [@kosara2016]. Data presentation starts from the assumption that we have derived most of the important insights from our data already, and the goal is now to communicate these insights clearly and make an impactful and lasting impression [@kosara2016]. In contrast, data exploration begins from a position of incomplete knowledge - we accept that there are facts about our data we might not be aware of yet. Thus, when we explore data with visualizations, the goal is to help us see what we might otherwise miss or might not even think to look for [@tukey1977; @unwin2018].    
 
 However, it is not always the case that more complex visuals necessarily translate to better statistical insights. In static visualization, it is a well-established fact that plots can include sophisticated-looking and seemingly appealing features which do not promote the acquisition of statistical insights in any way [@cairo2014; @cairo2019; @gelman2013; @tufte2001]. Similarly, adding interactivity to a visualization does not always improve its statistical legibility [see e.g. @abukhodair2013; @franconeri2021]. 
 
@@ -132,9 +132,11 @@ If we accept this proposition, then there are several important consequences tha
 
 That is not to say that purely graphical interactive features are not useful. For example, in the presence of overplotting, manipulating size or alpha of objects can help us features (areas of high density) that would otherwise remain hidden. Likewise, zooming and panning, while often being counted among the more high-level features, require manipulation of existing axis limits only and can be done without reference to the original data. Still, I argue that the ability to see new summaries of the data is what makes some interactive data visualizations systems ultimately more powerful (and also more challenging to implement). The interactive features that enable this, such as filtering, linked highlighting, and parameter manipulation, go beyond aesthetics, and empower the users to explore the data dynamically, uncovering hidden patterns and relationships that may otherwise remain hidden. 
 
-### List of common interactive features
+### Brief taxonomy of common interactive features
 
 This section describes several common types of interactive features that facilitate interactive data exploration. 
+
+Visual information seeking mantra: overview first, zoom and filter, then details-on-demand [@shneiderman2003].
 
 ## The highlighting problem
 
@@ -183,352 +185,6 @@ Thus, the choice is between stacking and dodging. While, as was discussed above,
 First, I propose that stacking is the superior method for *displaying* selection. Thanks to the four Gestalt principles of proximity, similarity, closure, and common region, in a stacked barplot, each bar presents itself as a single visual entity. In other words, since the stacked segments are placed right on top of each other, and share width and a closed border, they are perceived as part of a unified whole (the bar). This remains true throughout selection - no matter how the heights of the highlighted segments change, the height of the whole stacked bar remains constant, and so does the overall outline of the plot.
 
 To address the highlighting problem, we need to first discuss some key mathematical concepts.
-
-## Mathematical theory
-
-This section starts with some foundational mathematical concepts, such as functions, relations, and orders, and slowly builds up to more advanced topics such as categories, monoids, and functors. Readers familiar these concepts may feel free to skip ahead. However, even the fundamental concepts will be used throughout the thesis, so a refresher might be beneficial. 
-
-The material covers topics from category theory and abstract algebra and follows primarily from @fong2019, @lawvere2009, @baez2023, @pinter2010, and @milewski2018. For an accessible introduction to the topic, interested readers are encouraged to consult these references, particularly @fong2019 and @lawvere2009.
-
-#### Note on past applications of category theory to data visualization
-
-There have been some applications of category theory to data visualization in the past. Specifically, several authors have used category theory to describe the more abstract aspects of data visualization, with some trying to lay down the theoretical foundations for what it means to "visualize" [@beckmann1995] or for which visualizations can be considered well-formed perceptual representations of the data [@kindlmann2014]. Handful of authors have also jointly discussed category theory and data visualization in the context of functional programming, introducing new functional programming libraries and domain-specific languages for data visualization [see e.g. @yorgey2012; @petricek2021; @smeltzer2014; @smeltzer2018]. 
-
-The present thesis seeks to do neither. Instead, the goal is to use category theory to pin down the algebraic properties of the statistics underlying our visualizations, to determine which combinations of graphics, statistical summaries, and interactive features will work well together. Thus, the target is somewhere in the middle: provide a theoretical framework which will guide application.
-
-### Relations
-
-A relation is one of the simplest mathematical structures. Given two sets $X$ and $Y$, a relation $R$ between $X$ and $Y$ is a subset of the Cartesian product of the two sets, $R \subseteq X \times Y$. In other words, a relation can be thought of as the subset of pairs $(x, y) \in X \times Y$ for which the condition "$x$ and $y$ relate" holds. 
-
-There are many different types of relations. One of the most fundamental relations is equality; in this case, "$x$ and $y$ relate" means that, for our purposes, $x$ and $y$ are the same, i.e. $x = y$. Other examples of relations include the usual order relations $<$, $\leq$, $>$, $\geq$, or the divides operator $\mid$ ($x \mid y$ means "$x$ divides $y$ without remainder"). Finally, note that $X$ and $Y$ can be the same set, such that $R \subseteq X \times X$.
-
-Since a relation is a subset of the product set $X \times Y$, we can visualize it as a matrix, with values of $X$ as rows, values of $Y$ as columns, and the related pairs $(x, y)$ marked out in some specific way. For example, here's how we can display the order relation $\leq$ on the set $X = \{ 1, 2, 3 \}$:
-
-```{r}
-#| echo: false
-#| dpi: 300
-#| fig-cap: "A relation is a subset of the Cartesian product of two sets.
-#| The diagram shows the usual order relation $\\leq$.
-#| We can see that 1 is less than or equal to every other element, 
-#| 2 is less than or equal to 2 and 3, and 3 is less than or equal to 3 only.
-#| Note the symmetry between rows and columns - this is due to the fact that
-#| the same set ($X$) is display on both dimensions." 
-
-library(ggplot2)
-
-df_relation <- expand.grid(x = 1:3, y = 1:3)
-df_relation$rel <- df_relation$x <= df_relation$y
-
-ggplot(df_relation, aes(x, y, col = factor(rel))) +
-  geom_point(size = 25) +
-  scale_x_continuous(breaks = 1:3, limits = c(0.5, 3.5)) +
-  scale_y_continuous(breaks = 1:3, limits = c(0.5, 3.5)) +
-  scale_color_manual(values = c("white", "indianred")) +
-  labs(x = "X", y = "X") +
-  guides(col = "none") +
-  clean_theme +
-  theme(panel.background = element_rect(fill = "antiquewhite"),
-        panel.border = element_blank(),
-        axis.title.y = element_text(angle = 0, vjust = 0.5),
-        axis.title = element_text(colour = "grey60"))
-```
-
-As the examples above show, some relations $R$ are marked with an infix symbol (such as $\star$), such that, if $x$ and $y$ relate, i.e. $(x, y) \in R$, then we write $x \star_R y$ or $x \star y$ ($R$ implicit), for example, $x = y$, $x \leq y$, and so on. In less common types of relations, $R$ is also sometimes used as the infix symbol, e.g. $x R y$. If two elements do not relate, i.e. $(x, y) \not \in R$, we typically do not write this out explicitly - the lack of relation is indicated by its absence.
-
-Relations can have properties. For example, some types of relations are *reflexive*, meaning that $x \star x$ for all $x \in X$ (every element relates to itself). This is the case for equivalence relations. In fact, we can define equivalence relations using just three properties:
-
-::: {.definition name="Equivalence relation"}
-A relation $\sim$ on $X$ is called an equivalence relation if it is:
-
-1. *Reflexive*: $x \sim x$ for all $x \in X$
-2. *Symmetric*: $x \sim y$ if and only if $y \sim x$ for all $x, y \in X$
-3. *Transitive*: if $x \sim y$ and $y \sim z$, then $x \sim z$
-:::
-
-Equivalence relations encode the notion that two things are the same, *for our purposes*. We can further use them to assign objects in $X$ to *equivalence classes*, which divide $X$ into groups of equivalent objects. That is, for some element $a \in X$, its corresponding equivalence class is:
-
-$$[a] = \{ x \in X : x \sim a \}$$
-
-While relations might seem simple, they are very versatile. The next few sections will discuss three important examples of relations: functions, partitions, and preorders. 
-
-### Functions
-
-A function is a special kind of relation, one that encodes a mapping between two sets. More specifically, let $S$ be the set of sources (also called the *domain*) and $T$ be the set of possible targets (also called the *codomain*). Then, we can think of a function as a relation $F \subseteq S \times T$ of valid source-target pairs $(s, t)$, such that for every $s \in S$ in there exists a unique $t \in T$ with $(s, t) \in F$ (see Figure \@ref(fig:function-subset)). In other words, every source relates to exactly one target:
-
-```{r function-subset}
-#| echo: false
-#| dpi: 300
-#| fig-cap: "A function is a type of relation.
-#|  Specifically, it is a subset of the Cartesian product of its domain ($S$) and codomain ($T$),
-#|  such that element in the domain marks out exactly one element in the codomain (shown in red). 
-#| The depicted function has the following characteristics:
-#|  $F: \\{ 1, 2, 3 \\} \\to \\{ 1, 2, 3 \\}$, such that $F(1) = 1$, $F(2) = 1$, and $F(3) = 2$.
-#|  One possible example of this function might be $f(x) = \\lfloor x / 2 \\rceil$ 
-#|  (divide $x$ by two and round to the nearest whole number). 
-#|  Note that, for any function, there must be exactly one red dot in each column 
-#|  (each source maps to one and only one target), 
-#|  however, there may be zero or many red dots in any row 
-#|  (some targets may not be reached from any source, and others
-#|  may be reachable from many sources)."
-
-library(ggplot2)
-
-df_relation <- expand.grid(x = 1:3, y = 1:3)
-df_relation$rel <- with(df_relation, round(x / 2 + 0.1) == y)
-
-ggplot(df_relation, aes(x, y, col = factor(rel))) +
-  geom_point(size = 25) +
-  scale_x_continuous(breaks = 1:3, limits = c(0.5, 3.5)) +
-  scale_y_continuous(breaks = 1:3, limits = c(0.5, 3.5)) +
-  scale_color_manual(values = c("white", "indianred")) +
-  labs(x = "S", y = "T") +
-  guides(col = "none") +
-  clean_theme +
-  theme(panel.background = element_rect(fill = "antiquewhite"),
-        panel.border = element_blank(),
-        axis.title.y = element_text(angle = 0, vjust = 0.5),
-        axis.title = element_text(colour = "grey60"))
-```
-
-We can classify functions based on how their domains and codomains relate to each other (see Figure \@ref(fig:function-types)). If every target in the function's codomain has a path leading to it from some source, such that no target remains unreachable, then we call it a *surjective* or *onto* function. More formally:
-
-
-::: {.definition name="Surjectivity"}
-A function $f$ is surjective if, for all $t \in T$, there exists a $s \in S$ such that $f(s) = t$. 
-:::
-
-
-Alternatively, if each source in the function's domain leads to a unique target, such that no two sources map to the same target, then we call such a function *injective* or *one-to-one*. That is: 
-
-::: {.definition name="Injectivity"}
-A function is injective if for all $s_1, s_2 \in S$, if $f(s_1) = t$ and $f(s_2) = t$, then $s_1 = s_2$. 
-:::
-
-Finally, if a function is both surjective and injective, meaning that every target can be reached from, and only from, a unique source, then we call such a function *bijective* or a *bijection*.
-
-::: {.definition name="Bijectivity"}
-A function is a bijection and only if it is both surjective and injective, which is also the case if and only if it is invertible. 
-:::
-
-```{r, function-types}
-#| echo: false
-#| dpi: 300
-#| fig-cap: "Types of functions. 
-#| Left: in a *surjective* function, each target can be reached from some source. 
-#| Middle: in an *injective* function, there is a unique source for each target.
-#| Right: in a *bijection*, each target can be reached from, and only from, a unique source."
- 
-library(ggplot2)
-library(patchwork)
-
-normalize <- function(x) (x - min(x)) / (max(x) - min(x))
-
-plot_function <- function(mapping, codomain_size = NULL) {
-  
-  codomain_size <- ifelse(is.null(codomain_size), max(mapping), codomain_size)
-  
-  domain <- 1:length(mapping)
-  codomain <- 1:codomain_size
-  
-  # Center on the same value
-  diff <- mean(domain) - mean(codomain)
-  domain <- domain - diff / 2
-  codomain <- codomain + diff / 2
-  
-  domain <- normalize(domain)
-  codomain <- normalize(codomain)
-  
-  point_data <- data.frame(x = c(domain, codomain), 
-                           y = rep(c(1, 0), sapply(list(domain, codomain), length)))
-  arrow_data <- data.frame(x = domain, xend = codomain[mapping], 
-                           y = 1, yend = 0)
-  
-  h <- 0.25
-  
-  ggplot(point_data, aes(x, y)) +
-    geom_rect(aes(xmin = -0.2, xmax = 1.2, ymin = 0 - h / 2, ymax = 0 + h / 2),
-              fill = "antiquewhite") +
-    geom_rect(aes(xmin = -0.2, xmax = 1.2, ymin = 1 - h / 2, ymax = 1 + h / 2),
-              fill = "antiquewhite") +
-    geom_text(x = -0.1, y = 1.08, label = "S", size = 4, col = "grey60") +
-    geom_text(x = -0.1, y = -0.08, label = "T", size = 4, col = "grey60") +
-    geom_point(size = 5, col = "indianred") +
-    geom_segment(data = arrow_data, aes(x = x, xend = xend, y = y, yend = yend),
-                 arrow = arrow(angle = 30, length = unit(0.025, "npc")),
-                 col = "steelblue") +
-    scale_x_continuous(limits = c(-0.2, 1.2)) +
-    scale_y_continuous(limits = c(-0.2, 1.2)) +
-    clean_theme +
-    theme(panel.border = element_blank(),
-          axis.text = element_blank(),
-          axis.title = element_blank(),
-          plot.title = element_text(vjust = -5, hjust = 0.5))
-}
-
-p1 <- plot_function(c(1, 2, 1, 3, 4, 4)) + labs(title = "Surjective")
-p2 <- plot_function(c(3, 4, 2, 5), 6) + labs(title = "Injective")
-p3 <- plot_function(c(4, 2, 6, 3, 1, 5)) + labs(title = "Bijective")
- 
-p1 + p2 + p3
-
-```
-
-Bijections are special since they encode the idea of reversible transformations. Any bijective function $f$ has an associated inverse function $f^{-1}$ such that $f^{-1}(f(x)) = x$ and $f(f^{-1}(y)) = y$ for all $x$ and $y$ in the function's domain and codomain, respectively. In other words, we can keep translating the value from the domain to codomain and back without losing any information. We will generalize this idea later when we discuss *isomorphisms*.
-
-As an example, suppose I have a group of friends $f \in F$ that each went to one city $c \in C$ in Europe during the holiday. I can construct a function $f: F \to C$ that sends each friend to his or her holiday destination. If every city in $C$ was visited by at least one friend, then the function is surjective. If each friend went to a different destination, then the function is injective. If both are true - that is, if every city on our list was visited by exactly one friend - then the function is bijective. In that case, we could just as well use the names of cities $c \in C$ when we speak of friends $f \in F$ - instead of "Sam", we could say "the person who went to Rome", and it will be clear who are we talking about.
-
-An important property of functions is that they can be composed. Specifically, if the domain of one function matches the codomain of another, the functions can be composed by piping the output of the first function is used as the input of the second. Then we end up with a new, composite function: 
-
-::: {.definition name="Function composition"}
-If we have two functions $f: X \to Y$ and $g: Y \to Z$, we can form a new function $h: X \to Z$ such that:
-
-$$h(x) = g(f(x))$$
-In terms of notation, we can omit the explicit reference to the variable $x$ and write the composition in several different ways:
-
-1. $h = g \circ f$ (read: "apply $g$ after $f$")
-2. $h = gf$ (same as above)
-3. $h = f ⨾ g$ (read "apply $f$ then $g$")
-:::
-
-I will use the bracket notation ($h(x) = g(f(x))$) when explicitly referring to the variable, and the postfix/fat semicolon notation ($h = f ⨾ g$) otherwise.   
-
-There are other things we can do with functions. For example, given a subset of sources, we can ask about the *image* - the set of targets we can reach from those sources:
-
-::: {.definition name="Image"}
-For some subset $S_i \subseteq S$, its image under $f$ is defined as $f_!(S_i) = \{ f(s) \in T \lvert s \in S_i \}$. 
-:::
-
-Likewise, given a subset of targets, we can ask about the *pre-image* - the set of sources that could have produced those targets. That is:
-
-::: {.definition name="Pre-image"}
-For some subset $T_i \subseteq T$, its pre-image under $f$ is defined as $f^*(T_i) = \{ s \in S \lvert f(s) \in T_i \}$. 
-:::
-
-An important fact to note is that, although the pre-image $f^*$ is also sometimes called "inverse image", it is *not* the inverse of the image $f_!$ for most functions (unless they are bijections). That is, by applying the pre-image after image or vice versa, we cannot expect to come up with the same set as we started with. Specifically, if we have a non-injective function and apply the pre-image after the image, we may come up with *more* sources that we started with, $S_i \subseteq f^*(f_!(S_i))$ (equality if injective), and similarly, if we have a non-surjective function and apply the image after the pre-image, we might end up with *fewer* targets than we started with, $f_!(f^*(T_i)) \subseteq T_i$ (again, equality if surjective). 
-
-As an example, suppose again I have the function $f$ which maps each friend to a holiday destination. The image of that function, $f_!$, maps a set of friends to the set of all cities that at least one of them went to, and similarly, the pre-image, $f^*$, maps a set of cities to the set of friends that went to them.  
-Now, suppose that Sam and Dominic went to Rome, and I ask:
-
-> *"who went to [the city that Sam went to]?"*
-
-I will get both Sam and Dominic back, since:
-
-$$f^*(f_!(\{ Sam \})) = f^*(\{ Rome \}) = \{ Sam, Dominic \}$$
-
-That is, I will get back Sam and Dominic *even though I had initially only asked about Sam*. Similarly, if no friends had visited Paris and I ask:
-
-> *"what are the cities that [people who went to Paris or Rome] went to?"*
-
-then I will get Rome only, since 
-
-$$f_!(f^*(\{Paris, Rome \})) = f_!(\{ Sam, Dominic \}) = \{ Rome \}$$
-
-This weird relationship between the the image and the pre-image is due to the fact that the image is actually something called *left adjoint* [@baez2023; @fong2019]. Adjoints can be thought of as the "best approximate answer to a problem that has no solution" [no inverse, @baez2023], and they come in pairs - a left and a right adjoint - with the left adjoint being more permissive or "liberal" and the right adjoint being more strict or "conservative" [@baez2023].
-
-Proper treatment of adjoint is beyond the scope of this thesis, however.
-
-### Partitions
-
-One useful thing we can construct with functions (or equivalently, relations) are partitions. Partitions encode the idea of splitting elements of some some into distinct groups.  
-
-::: {.definition name="Function definition of a partition"}
-Given some set $X$, a set of part labels $P$, and a surjective function $f: X \to P$, we can partition $A$ by assigning every element $x \in X$ a part label $p \in P$, by simply applying the function: $f(x) = p$.
-:::
-
-Above we used a function to define a partition, however, we can achieve the same with a relations, specifically equivalence classes. By taking any part label $p \in P$, we can recover the corresponding subset of $X$ by pulling out its pre-image: $f^*(\{p\}) = X_p \subseteq X$. We can then define a partition without reference to $f$:
-
-::: {.definition name="Equivalence class definition of a partition"}
-A partition of $A$ consists of a set of part labels $P$, such that, for all $p \in P$, there is a non-empty subset $A_p \subseteq A$ which forms an equivalence class on $A$ and:
-
-$$X = \bigcup_{p \in P} X_p \qquad \text{and} \qquad \text{if } p \neq q, \text{ then } X_p \cap X_q = \varnothing$$
-I.e. the parts $X_p$ jointly cover the entirety of $X$ and parts cannot share any elements.
-:::
-
-We can rank partitions by their coarseness. That is, for any set $X$, the coarsest partition is one with only one part label $P = \{ 1 \}$, such that each element of $X$ gets assigned $1$ as label. Conversely, the finest partition is one where each element gets assigned its own unique part label, such that $\lvert X \lvert = \lvert P \lvert$. 
-
-Given two partitions, we can form a finer (or at least as fine) partition by taking their intersection, i.e. by taking the set of all unique pairs of labels that co-occur for any $x \in X$ as the new part labels. For example, suppose $X = \{ 1, 2, 3 \}$ and partition 1 assigns part labels:
-
-$$p_1(x) = \begin{cases} 
-a & \text{if } x = 1 \text{ or } x = 2 \\
-b & \text{if } x = 3
-\end{cases}$$
-
-and partition 2 assigns part labels the following way:
-
-$$
-p_2(a) = \begin{cases}
-s & \text{if } x = 1 \\
-t & \text{if } x = 2 \text{ or } x = 3
-\end{cases}
-$$
-
-Then the intersection partition will have the following part labels $P_3 = \{ (a, s), (a, t), (b, t) \}$ such that:
-
-$$
-p_3(a) = \begin{cases}
-(a, s) & \text{if } x = 1 \\
-(b, s) & \text{if } x = 2 \\ 
-(b, t) & \text{if } x = 3
-\end{cases}
-$$
-
-### Preorders
-
-::: {.definition name="Preorder"}
-A preorder is a set $X$ equipped with a binary relation $\leq$ that conforms to two simple properties:
-
-1. *Reflexivity*: $x \leq x$ for all $x \in X$
-2. *Transitivity*: if $x \leq y$ and $y \leq z$, then $x \leq z$, for all $x, y, z \in X$
-:::
-
-Simply speaking, this means that between any two elements in $X$, there either is a relation and the elements relate (one element is somehow "less than or equal" to the other), or the two elements do not relate. 
-
-An example of a preorder is the family tree, with the underlying set being the set of family members: $X = \{  \textbf{daughter}, \textbf{son}, \textbf{mother}, \textbf{father}, \textbf{grandmother}, ... \}$ and the binary relation being ancestry or familial relation. Thus, for example, $\textbf{daughter} \leq \textbf{father}$, since the daughter is related to the father, and $\textbf{father} \leq \textbf{father}$, since a person is related to themselves. However, there is no relation ($\leq$) between $\textbf{father}$ and $\textbf{mother}$ since they are not related. Finally, since $\textbf{daughter} \leq \textbf{father}$ and $\textbf{father} \leq \textbf{grandmother}$, then, by reflexivity, $\textbf{daughter} \leq \textbf{grandmother}$.
-
-We can further restrict preorders by imposing additional properties, such as:
-
-3. If $x \leq y$ and $y \leq x$, then $x = y$ (anti-symmetry)
-4. Either $x \leq y$ or $y \leq x$ (comparability)
-
-If a preorder conforms to 3., we speak of a partially ordered set or *poset*. If it conforms to both 3. and 4., then it is a *total order*. 
-
-### Monoids
-
-A monoid is a tuple $(M, e, \otimes)$ consisting of:
-
-a. A set of objects $M$
-b. A neutral element $e$ called the *monoidal unit*
-c. A binary function $\otimes: M \times M \to M$ called the *monoidal product*
-
-Such that:
-
-1. $m \otimes e = e \otimes m = m$ for all $m \in M$ (unitality)
-2. $m_1 \otimes (m_2 \otimes m_3) = (m_1 \otimes m_2) \otimes m_3 = m_1 \otimes m_2 \otimes m_3$ for all $m_1, m_2, m_3 \in M$ (associativity)
-
-In simple terms, monoids encapsulate the idea that *the whole is exactly the "sum" of its parts* (where "sum" can be replaced by the monoidal product). Specifically, we have some elements and a way to combine them, and when we combine the same elements, no matter where we put the brackets we always get the same result (i.e. something like "the order does not matter", although that is not precisely right, more on that later). Finally, we have some neutral element that when combined with an element yields back the same element.  
-
-For example, take summation on natural numbers, $(\mathbb{N}, 0, +)$:
-
-$$1 + 0 = 0 + 1 = 1 \qquad \text{(unitality)}$$
-$$1 + (2 + 3) = (1 + 2) + 3 = 1 + 2 + 3 \qquad \text{(associativity)}$$
-
-Likewise, products of real numbers $(\mathbb{R}, 1, \times)$ are also a monoid, and so is multiplication of $n \times n$ square matrices $(\mathbf{M}_{n \in \mathbb{Z}}, \mathbf{I}, \cdot)$, where $\mathbf{I}$ is the identity matrix and $\cdot$ stands for an infix operator that is usually omitted. As a counterexample, exponentiation does not meet the definition of a monoid, since it is not associative: $x^{(y^z)} \neq (x^y)^z$. 
-
-There are more exotic forms of monoids as well. For example, the operation of appending a value to a vector and taking the Euclidean norm can also be recast as a monoid:
-
-$$||(||(x, y)||_2, z)||_2 = \sqrt{\bigg(\sqrt{(x^2 + y^2)}\bigg)^2 + z^2} = \sqrt{(x^2 + y^2) + z^2} = ||(x, y, z)||_2$$
-
-We may want to impose further restrictions on monoids, for example:
-
-3. $m_1 \otimes m_2 = m_2 \otimes m_1$ for all $m_1, m_2 \in M$ (commutativity)
-
-Both commutativity and associativity can both be viewed as a kind of "order does not matter" rule, however, they are fundamentally different. Let's imagine our set of objects consists of three wires of different colours $\{ \textbf{red}, \textbf{green}, \textbf{blue} \}$ and the monoidal product consists of connecting wires. Let's also imagine that the $\textbf{red}$ wire is connected to a power source and the $\textbf{blue}$ wire is connected to a lightbulb, and the blue wire amplifies the current from the power source such that it is enough to power the light bulb. To turn on the lightbulb, we need to connect $\textbf{red} \to \textbf{green}$ and $\textbf{green} \to \textbf{blue}$. The time order in which we connect the three wires does not matter: we can connect $\textbf{green} \to \textbf{blue}$ first and $\textbf{red} \to \textbf{green}$ second or vice versa, either way we get the same result (lightbulb turns on). However, the spatial order in which we connect the wires *does* matter: if we connect $\textbf{red} \to \textbf{blue}$, then the current will not be enough to power the lightbulb. Hence, the operation is associative (temporal order does not matter) but not commutative (spatial order does matter).      
-
-If $M$ is a preorder, another restriction we may want to impose is that the monoidal product is strictly increasing:
-
-4. $m_1 \leq m_1 \otimes m_2$ and $m_2 \leq m_1 \otimes m_2$ for all $m_1, m_2 \in M$ (monotonicity)
-
-This means that when we combine two things, we get back something that's at least as big as the bigger of the two things. Summation of natural numbers $(\mathbb{N}, 0, +)$ again works, but for example summation of integers $(\mathbb{Z}, 0, +)$ or multiplication of reals $(\mathbb{R}, 1, \times)$ does not. 
 
 ## Theory of data visualization systems
 
