--- a/math.Rmd
+++ b/math.Rmd
@@ -227,7 +227,7 @@ Throughout this thesis, I will use the bracket notation ($h(x) = g(f(x))$) when 
 
 Surjectivity, injectivity, and bijectivity propagate through composition: composition of two surjective functions is surjective, composition of two injective functions is injective, and composition of two bijective functions is bijective. However, the converse does not necessarily hold: a bijective function does not have to be composed of two bijections:
 
-```{r}
+```{r bijection}
 #| echo: false
 #| dpi: 300
 #| fig-height: 3
@@ -362,20 +362,63 @@ A preorder is a set $X$ equipped with a binary relation $\leq$ that conforms to 
 2. *Transitivity*: if $x \leq y$ and $y \leq z$, then $x \leq z$, for all $x, y, z \in X$
 :::
 
-Notice here, we are not just speaking of the relation, but also the underlying set $X$.  
+Simply speaking, this means that, if we pick any two elements in the set $X$, they either relate and one element is "less than or equal to" the other, in some sense, or they do not relate at all.
 
-Simply speaking, this means that between any two elements in $X$, there either is a relation and the elements relate (one element is somehow "less than or equal" to the other), or the two elements do not relate. 
+One simple example of a preorder is the family tree, see Figure \@ref(fig:family-tree). Here, the underlying set is the family: $X = \{  daughter, son, mother, father, grandmother, ... \}$ and the binary relation is ancestry or familial relation. Thus, for example, $daughter \leq father$, since the daughter is related to (is offspring of) the father, and $father \leq father$, since a person is related to themselves (for the sake of this example). However, there is no relation ($\leq$) between $father$ and $mother$ since they are not related. Finally, since $daughter \leq father$ and $father \leq grandmother$, then, by reflexivity, $daughter \leq grandmother$.
 
-An example of a preorder is the family tree, with the underlying set being the set of family members: $X = \{  daughter, son, mother, father, grandmother, ... \}$ and the binary relation being ancestry or familial relation. Thus, for example, $\textbf{daughter} \leq \textbf{father}$, since the daughter is related to the father, and $\textbf{father} \leq \textbf{father}$, since a person is related to themselves. However, there is no relation ($\leq$) between $\textbf{father}$ and $\textbf{mother}$ since they are not related. Finally, since $\textbf{daughter} \leq \textbf{father}$ and $\textbf{father} \leq \textbf{grandmother}$, then, by reflexivity, $\textbf{daughter} \leq \textbf{grandmother}$.
+```{r family-tree, engine='tikz'}
+#| echo: false
+#| fig-height: 3
+#| fig-cap: "An example of a simple preorder: family tree ordered by familial relation."
+
+\begin{tikzpicture}
+
+  \filldraw[white] (-5, -1) rectangle (4, 5);
+
+  \node (s) at (-1, 0) [draw] {Son};
+  \node (d) at (1, 0) [draw] {Daughter};
+  \node (f) at (-1, 2) [draw] {Father};
+  \node (m) at (1, 2) [draw] {Mother};
+  \node (g) at (-1, 4) [draw] {Grandmother};
+
+  \draw[->] (s.north) to (f.south);
+  \draw[->] (s.70) -- (m.250);
+  \draw[->] (d.110) -- (f.290);
+  \draw[->] (d.north) -- (m.south);
+  \draw[->] (f.north) -- (g.south);
+
+\end{tikzpicture}
+```{}
+```
+
+Another common example of a preorder is the set of natural numbers $\mathbb{N}$, ordered by the usual order relation, or by the division relation: $x \leq y$ iff $x \mid y$ ($x$ divides $y$ without remainder).
 
 We can further restrict preorders by imposing additional properties, such as:
 
 3. If $x \leq y$ and $y \leq x$, then $x = y$ (anti-symmetry)
 4. Either $x \leq y$ or $y \leq x$ (comparability)
 
-If a preorder conforms to 3., we speak of a partially ordered set or *poset*. If it conforms to both 3. and 4., then it is a *total order*. 
+If a preorder conforms to property 3, we speak of a partially ordered set or *poset*. If it conforms to both 3 and 4, then it is a *total order*. 
+
+Preorders are interesting because they give us a first taste of something we will be discussing a lot throughout this thesis: structure-preserving maps. Specifically, if we have two preorders $(X, \leq_X)$ and $(Y, \leq_Y)$, and a set of functions $F$ which map values between $X$ and $Y$, we can classify the functions in $F$ by whether they preserve the order in $X$ or not. That is, we call a function $f \in F$ order-preserving or a "monotone map", if:
+
+::: {.definition name="Monotone map"}
+A monotone map $f: X \to Y$ is a function between two preorders $(X, \leq_X)$ and $(Y, \leq_Y)$, such that, for all $x_1, x_2 \in X$:
+
+$$\text{if} \;\; x_1 \leq_X x_2 \;\; \text{then} \;\; f(x_1) \leq_Y f(x_2) $$
+:::
+
+For example, suppose we have a set of functions mapping between the set of natural numbers ordered by the usual order relation, $(\mathbb{N}, \leq)$, and the set of reals, again ordered by the usual order relation $(\mathbb{R}, \leq)$. Then the function $f(x) = \log(x)$ is a monotone map, since:
+
+$$\text{if} \;\; x_1 \leq_{\mathbb{N}} x_2 \;\; \text{then} \;\; \log(x_1) \leq_{\mathbb{R}} \log(x_2)$$
+
+However, there are many other types of functions which do not preserve order, e.g. $g(x) = \sin(x)$ or $h(x) = -x$. As another example, if we take as our domain the powerset of some set $X$, ordered by inclusion relation, $(\mathcal{P}(X), \leq)$, then one order preserving map is the cardinality of the sets.
+
+Monotone maps compose: if $f: X \to Y$ is a monotone map, and $g: Y \to Z$ is a monotone map, then their composite $h: X \to Z$ is also a monotone map.
 
 ### Monoids
+
+In the previous subsection, we discussed preorders as an example of taking a set $X$ and imposing some type of structure on it: namely, order. However, there are other types of structure than order. One such type of structure, which encodes the idea of combining or merging elements together, is a monoid.  
 
 A monoid is a tuple $(M, e, \otimes)$ consisting of:
 
@@ -388,7 +431,7 @@ Such that:
 1. $m \otimes e = e \otimes m = m$ for all $m \in M$ (unitality)
 2. $m_1 \otimes (m_2 \otimes m_3) = (m_1 \otimes m_2) \otimes m_3 = m_1 \otimes m_2 \otimes m_3$ for all $m_1, m_2, m_3 \in M$ (associativity)
 
-In simple terms, monoids encapsulate the idea that *the whole is exactly the "sum" of its parts* (where "sum" can be replaced by the monoidal product). Specifically, we have some elements and a way to combine them, and when we combine the same elements, no matter where we put the brackets we always get the same result (i.e. something like "the order does not matter", although that is not precisely right, more on that later). Finally, we have some neutral element that when combined with an element yields back the same element.  
+In simple terms, monoids encapsulate the idea that *the whole is exactly the "sum" of its parts* (where "sum" can be replaced by the monoidal product). Specifically, when we have a monoid $(M, \otimes, e)$, we have some elements $m \in M$ and a way to combine them, such that, when we combine the same elements, we always get the same result, no matter in what order we do it in (brackets do not matter). We also have some neutral element that when combined with an element yields back the same element.  
 
 For example, take summation on natural numbers, $(\mathbb{N}, 0, +)$:
 
